updated social links

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 }
 
 
-.custom-overlay {
+/* .custom-overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -20,4 +20,4 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
